--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Tactile theme
-description: Tactile is a theme for GitHub Pages.
-show_downloads: true
+title: Sunday Open League
+description: Curling League at the Vancouver Curling Club
 google_analytics:
 theme: jekyll-theme-tactile
