--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Sunday Open League
 description: Sunday Open League
 google_analytics:
-theme: jekyll-theme-tactile
+theme: jekyll-theme-time-machine
