tweak default layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Sunday Open League
+title: Sunday Open League @ Vancouver Curling Club
 description: Sunday Open League
 google_analytics:
 theme: jekyll-theme-time-machine
